--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   var map = L.map('map', {
     center: [41.57, -72.69], // EDIT latitude, longitude to re-center map
     zoom: 9,  // EDIT from 1 to 18 -- decrease to zoom out, increase to zoom in
-    scrollWheelZoom: false,
+    scrollWheelZoom: true,
     tap: false
   });
 
